# simetrics-api

./: .env.dev  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  create-multiple-databases.sh  docker-compose.yml
.github/workflows/: test.yml
migrations/: 001_create_tokens_table.sql
src/: health.rs  lib.rs  main.rs  redis.rs  simulation.rs  token.rs
