[package]
name = "tokenomics-simulator-api"
version = "0.1.0"
license = "MIT"
edition = "2021"
readme = "README.md"
authors = ["Slavik Pastushenko <slavpas@gmail.com>"]
keywords = ["tokenomics", "crypto", "blockchain", "simulator"]
repository = "https://github.com/slavik-pastushenko/tokenomics-simulator"
documentation = "https://docs.rs/tokenomics-simulator"

[lib]
name = "tokenomics_simulator_api"
path = "src/lib.rs"

[[bin]]
name = "tokenomics_simulator_api"
path = "src/main.rs"

[dependencies]
axum = "0.8.1"
chrono = { version = "0.4.39", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
uuid = { version = "1.12.1", features = ["serde", "v4"] }
tokenomics-simulator = { path = "../tokenomics-simulator-rs" }
thiserror = "2.0.11"
sqlx = { version = "0.8.3", features = [
  "rust_decimal",
  "runtime-tokio",
  "postgres",
  "uuid",
  "chrono",
  "json",
] }
strum = "0.26.3"
strum_macros = "0.26.4"
serde_variant = "0.1.3"
serde_json = { version = "1.0.137", features = ["raw_value"] }
